force-app/main/default/objects/Opportunity/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Treatment Plans</relationshipLabel>
    <relationshipName>Treatment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>