force-app/main/default/objects/Opportunity/fields/Assigned_Treatment_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Treatment_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Treatment Bundle</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Treatment Plans</relationshipLabel>
    <relationshipName>Treatment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>