force-app/main/default/objects/Opportunity/fields/Plan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Plan_Notes__c</fullName>
    <label>Plan Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>