force-app/main/default/objects/Opportunity/fields/Shelter_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Color_Code__c</fullName>
    <label>Shelter Color Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>