force-app/main/default/objects/Opportunity/fields/Treatment_Priority__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Priority__c</fullName>
    <label>Treatment Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily (7 days/ wk)</fullName>
            </value>
            <value>
                <fullName>High ( 5 Days/ wk)</fullName>
            </value>
            <value>
                <fullName>Medium ( 4 days / wk)</fullName>
            </value>
            <value>
                <fullName>Low ( 2 days / wk)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>